--- a/src/app/home/user/components/basic-details/basic-details.component.html
+++ b/src/app/home/user/components/basic-details/basic-details.component.html
@@ -18,7 +18,7 @@
           "
         >
           <div *ngIf="control.age.errors?.required" class="invalid">
-            *age is required!
+            age is required!
           </div>
         </div>
 
@@ -64,7 +64,7 @@
           "
         >
           <div *ngIf="control.height.errors?.required" class="invalid">
-            *height is required!
+            height is required!
           </div>
         </div>
 
@@ -90,7 +90,7 @@
           "
         >
           <div *ngIf="control.weight.errors?.required" class="invalid">
-            *weight is required!
+            weight is required!
           </div>
         </div>
 
@@ -127,7 +127,7 @@
             "
           >
             <div *ngIf="control.activity.errors?.required" class="invalid">
-              *activity is required!
+              activity is required!
             </div>
           </div>
         </div>
