--- a/src/app/home/user/components/detail/detail.component.css
+++ b/src/app/home/user/components/detail/detail.component.css
@@ -26,11 +26,11 @@ label {
   border: 1px solid red;
 }
 input:read-only {
-  background-color: #6e985680;
+  background-color: rgb(88 154 66 / 43%);
   color: white;
 }
 input {
-  background-color: #6e985680;
+  background-color: rgb(88 154 66 / 43%);
   color: white;
 }
 .card-header {
@@ -44,7 +44,7 @@ input {
   border-left: none;
   border-right: none;
   border-bottom: none;
-  background-color: #6e985680;
+  background-color: rgb(88 154 66 / 43%);
   color: white;
   border-radius: 0%;
   width: 207px;
@@ -102,7 +102,7 @@ input[type="range"]::-webkit-slider-thumb {
   padding-right: 30px;
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #0c0c0cab;
+  background-color: #0c0c0ccc;
   margin-top: 40px;
   margin-left: 180px;
 }
@@ -110,9 +110,12 @@ input[type="range"]::-webkit-slider-thumb {
 .content {
   height: 553px;
   width: 100%;
-  background-image: url("https://th.bing.com/th/id/R.7689c5513084cd3ae199cec4f9b84af3?rik=epCX11FOp%2bUvgQ&riu=http%3a%2f%2fsfwallpaper.com%2fimages%2fbackground-food-7.jpg&ehk=OyOpA7JOvJ5kSZoKblkX96cNQ3uiu%2fHJUTOzI7b3j6o%3d&risl=&pid=ImgRaw&r=0");
+  background-image: url("https://images.pexels.com/photos/952353/pexels-photo-952353.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  /* background-image: url("https://images.pexels.com/photos/616401/pexels-photo-616401.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"); */
+  /* background-image: url("https://th.bing.com/th/id/R.7689c5513084cd3ae199cec4f9b84af3?rik=epCX11FOp%2bUvgQ&riu=http%3a%2f%2fsfwallpaper.com%2fimages%2fbackground-food-7.jpg&ehk=OyOpA7JOvJ5kSZoKblkX96cNQ3uiu%2fHJUTOzI7b3j6o%3d&risl=&pid=ImgRaw&r=0"); */
   background-attachment: fixed;
   background-size: cover;
+  filter: saturate(110%);
 }
 
 .range-value {
@@ -146,6 +149,6 @@ input[type="number"]::-webkit-outer-spin-button {
   display: inline;
     width: 37px;
     color: white;
-    background-color: #6e985680;
+    background-color: rgb(88 154 66 / 43%);
     padding: 6px;
 }
