--- a/src/app/home/user/components/detail/detail.component.html
+++ b/src/app/home/user/components/detail/detail.component.html
@@ -54,7 +54,7 @@
                 "
               >
                 <div *ngIf="control.height.errors?.required" class="invalid">
-                  *height is required!
+                  height is required!
                 </div>
               </div>
             </div>
@@ -75,7 +75,7 @@
                 "
               >
                 <div *ngIf="control.activity.errors?.required" class="invalid">
-                  *activity is required!
+                  activity is required!
                 </div>
               </div>
             </div>
@@ -136,7 +136,7 @@
                 "
               >
                 <div *ngIf="control.age.errors?.required" class="invalid">
-                  *age is required!
+                  age is required!
                 </div>
               </div>
             </div>
@@ -162,7 +162,7 @@
                 "
               >
                 <div *ngIf="control.weight.errors?.required" class="invalid">
-                  *weight is required!
+                  weight is required!
                 </div>
               </div>
             </div>
