--- a/src/app/home/user/components/user/user.component.html
+++ b/src/app/home/user/components/user/user.component.html
@@ -70,7 +70,7 @@
             "
           >
             <span *ngIf="control.height.errors?.required"
-              >*Height required!</span
+              >Height required!</span
             >
           </ng-container>
           <ng-template #elseblk>
@@ -97,7 +97,7 @@
             "
           >
             <span *ngIf="control.activity.errors?.required"
-              >*Activity required!</span
+              >Activity required!</span
             >
           </ng-container>
           <ng-template #elseblk>
@@ -193,7 +193,7 @@
             "
           >
             <span *ngIf="control.weight.errors?.required"
-              >*Weight required!</span
+              >Weight required!</span
             >
           </ng-container>
           <ng-template #elseblk>
