--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,30 +1,35 @@
 <div class="content">
   <div class="inner-content">
     <div class="row">
-      <div class="col-7">
+      <div style="position: relative; width: 65%">
         <img
           src="https://www.thelastfoodblog.com/wp-content/uploads/2017/09/mushroom-curry-landscape.jpg"
           width="100%"
           height="100%"
-          style="filter: saturate(130%)"
+          style="filter: saturate(130%); position: absolute"
         />
+        <h6 class="quote" id="line1">Health</h6>
+        <h6 class="quote" id="line2">a care that</h6>
+        <h6 class="quote" id="line3">never quits...</h6>
       </div>
-      <div class="col-5">
+      <div style="width: 35%">
         <div
           style="
-            margin-left: 45px;
-            margin-right: 45px;
-            margin-top: 20px;
-            margin-bottom: 46px;
+            margin-left: 31px;
+            margin-right: 31px;
+            margin-top: 16px;
+            margin-bottom: 32px;
             filter: saturate(120%);
           "
         >
-          <div class="card-header text-center mb-3"><img
-            src="https://cdn4.iconfinder.com/data/icons/fruits-79/48/08-orange-256.png"
-            height="25px"
-            width="25px"
-            style="margin-right: 5px;filter:saturate(120%);"
-          />NUTRIPLAN</div>
+          <div class="card-header text-center mb-3">
+            <img
+              src="https://icons.iconarchive.com/icons/aha-soft/desktop-buffet/256/Cocktail-icon.png"
+              height="25px"
+              width="25px"
+              style="margin-right: 5px; filter: saturate(120%);margin-bottom: 5px;"
+            />NUTRIPLAN
+          </div>
           <h6>Login with your username and password</h6>
           <form [formGroup]="userlogin" (ngSubmit)="onLogin()">
             <div class="row mt-3">
@@ -45,7 +50,7 @@
                 "
               >
                 <span *ngIf="control.username.errors?.required"
-                  >*Username required!</span
+                  >Username required!</span
                 >
               </ng-container>
               <ng-template #elseblk>
@@ -66,16 +71,17 @@
             <div class="invalid">
               <ng-container
                 *ngIf="
-                 ( control.password.invalid &&
-                    (control.password.touched || control.password.dirty))||loginResultFailed;
+                  (control.password.invalid &&
+                    (control.password.touched || control.password.dirty)) ||
+                    loginResultFailed;
                   else elseblk
                 "
               >
                 <span *ngIf="control.password.errors?.required"
-                  >*Password required!</span
+                  >Password required!</span
                 >
                 <span *ngIf="loginResultFailed; else elseblk">
-                  *Invalid username or password
+                  Invalid username or password
                 </span>
               </ng-container>
               <ng-template #elseblk>
