--- a/src/app/auth/registration/registration.component.css
+++ b/src/app/auth/registration/registration.component.css
@@ -10,12 +10,51 @@
   height: 30px;
   width: max-content;
 }
+.passwordField {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-radius: 0%;
+  padding: 0.375rem 0.75rem;
+  height: 30px;
+  width: 172px;
+  border-bottom: 1px solid lightgray;
+}
+.passwordField:focus-visible {
+  outline: white;
+  border-color: rgb(26, 136, 26);
+}
+.iconbtn {
+  border: none;
+  padding: 0px;
+  background-color: white;
+}
+.eyeIcon {
+  color: gray;
+  margin-top: 2px;
+  height: 25px;
+  padding-right: 5px;
+  width: 22px;
+  border-bottom: 1px solid lightgrey;
+  cursor: pointer;
+}
+.reqField {
+  margin-left: 3px;
+  color: red;
+}
+.form-control.ng-invalid.ng-touched {
+  border-color: red;
+}
+.passwordField.ng-invalid.ng-touched {
+  border-color: red;
+}
 .side-crop {
   overflow: hidden;
+  position: relative;
 }
 .side-crop img {
-  margin: 0 -6.885%;
-  width: 137.777%;
+  margin: 0px -2.885%;
+  width: 103.777%;
 }
 .row {
   --bs-gutter-x: 0;
@@ -38,7 +77,11 @@ input:read-only {
   font-family: sans-serif;
   height: 50px;
   padding-top: 15px;
+  width: 92%;
+  padding-left: 5px;
+  margin-left: 13px;
   filter: saturate(120%);
+  border-bottom: 1px solid green;
 }
 .save-button {
   background: rgb(10, 138, 10);
@@ -76,7 +119,7 @@ input:read-only {
   color: red;
   margin-left: 12px;
   font-size: 13px;
-  margin-top: 9px;
+  margin-top: 11px;
 }
 label {
   padding-top: 10px;
@@ -117,7 +160,7 @@ a {
   background-image: url("https://c0.wallpaperflare.com/preview/906/427/616/meal-healthy-eating-health-minimal.jpg");
 }
 .inner-content {
-  padding-top: 75px;
+  padding-top: 93px;
   padding-bottom: 59px;
   padding-left: 160px;
   padding-right: 160px;
@@ -138,4 +181,23 @@ input:-webkit-autofill {
 }
 input:-webkit-autofill:focus {
   box-shadow: 0 0 0px 1000px white inset;
+}
+.quote {
+  position: absolute;
+  font-size: 16px;
+  font-style: italic;
+  font-family: auto;
+  color: floralwhite;
+}
+#line1 {
+  padding-top: 38px;
+  padding-left: 25px;
+}
+#line2 {
+  padding-top: 75px;
+  padding-left: 45px;
+}
+#line3 {
+  padding-top: 110px;
+  padding-left: 20px;
 }
