--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -1,35 +1,42 @@
 <div class="content">
   <div class="inner-content">
     <div class="row">
-      <div class="col-6 side-crop">
+      <div class="col-7 side-crop">
+        <!-- src="https://imagenmore.ae/images/food-photography-coffee-.jpg" -->
+        <!-- https://images.pexels.com/photos/1502286/pexels-photo-1502286.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2 -->
         <img
-          src="https://imagenmore.ae/images/food-photography-coffee-.jpg"
+          src="https://images.unsplash.com/photo-1548943487-a2e4e43b4853?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
           width="100%"
           height="100%"
-          style="filter: contrast(120%)"
+          style="filter: contrast(120%); position: absolute"
         />
+        <h6 class="quote" id="line1">Health</h6>
+        <h6 class="quote" id="line2">a care that</h6>
+        <h6 class="quote" id="line3">never quits...</h6>
       </div>
-      <div class="col-6" style="background-color: white">
+      <div class="col-5" style="background-color: white">
         <div
           style="
-            margin-left: 45px;
-            margin-right: 45px;
-            margin-top: 25px;
-            margin-bottom: 36px;
+            margin-left: 5px;
+            margin-right: 5px;
+            margin-top: 17px;
+            margin-bottom: 37px;
           "
         >
           <div class="card-header text-center">
             <img
-              src="https://cdn4.iconfinder.com/data/icons/fruits-79/48/08-orange-256.png"
+              src="https://icons.iconarchive.com/icons/aha-soft/desktop-buffet/256/Cocktail-icon.png"
               height="25px"
               width="25px"
-              style="margin-right: 5px; filter: saturate(140%)"
+              style="margin-right: 5px; filter: saturate(140%);margin-bottom: 5px;"
             />NUTRIPLAN
           </div>
 
           <form [formGroup]="userProfile" (ngSubmit)="onRegister()">
             <div style="height: 23px" class="row mt-3">
-              <label class="col-5">Username</label>
+              <label class="col-5">
+                Username<span class="reqField">*</span></label
+              >
               <input
                 type="text"
                 class="form-control col-7"
@@ -47,12 +54,17 @@
                 "
               >
                 <span *ngIf="control.username.errors?.required"
-                  >*Username required!</span
+                  >Username required!</span
                 >
                 <span *ngIf="control.username.errors?.minlength">
-                  *Username must be atleast 8 characters long! </span
+                  Username must be atleast 8 characters long! </span
                 ><span *ngIf="control.username.errors?.usernameTaken">
-                  *username {{ userProfile.value.username }} is already taken!!
+                  Username {{ userProfile.value.username }} is already taken!! </span
+                ><span *ngIf="control.username.errors?.otherCaharactersPresent">
+                  Username must contain only alphabets!
+                </span>
+                <span *ngIf="control.username.errors?.pattern">
+                  Please provide a valid username!
                 </span>
               </ng-container>
               <ng-template #elseblk>
@@ -61,7 +73,7 @@
             </div>
 
             <div style="height: 23px" class="row">
-              <label class="col-5">Email</label>
+              <label class="col-5"> Email<span class="reqField">*</span></label>
               <input
                 type="email"
                 class="form-control col-7"
@@ -79,12 +91,16 @@
                 "
               >
                 <span *ngIf="control.email.errors?.required"
-                  >*email required!</span
+                  >email required!</span
                 >
-                <span *ngIf="control.email.errors?.email">
-                  *Please provide a valid email ID </span
+                <span
+                  *ngIf="
+                    control.email.errors?.pattern || control.email.errors?.email
+                  "
+                >
+                  Please provide a valid email ID </span
                 ><span *ngIf="control.email.errors?.emailTaken">
-                  *email already exists!!
+                  email already exists!!
                 </span>
               </ng-container>
               <ng-template #elseblk>
@@ -93,12 +109,64 @@
             </div>
 
             <div style="height: 23px" class="row">
-              <label class="col-5">Password</label>
-              <input
-                type="password"
-                class="form-control col-7"
-                formControlName="password"
-              />
+              <label class="col-5">
+                Password<span class="reqField">*</span></label
+              >
+              <div class="col-6">
+                <input
+                  type="{{ showPassword ? 'text' : 'password' }}"
+                  class="passwordField"
+                  formControlName="password"
+                  (focus)="changeColor()"
+                  (blur)="regularColor()"
+                /><span *ngIf="showPassword">
+                  <button
+                    type="button"
+                    class="iconbtn"
+                    (click)="showPasswordToggle()"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="16"
+                      height="16"
+                      fill="currentColor"
+                      class="bi bi-eye-fill eyeIcon"
+                      viewBox="0 0 16 16"
+                      [ngStyle]="iconStyle"
+                    >
+                      <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z" />
+                      <path
+                        d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"
+                      />
+                    </svg>
+                  </button>
+                </span>
+                <span *ngIf="!showPassword">
+                  <button
+                    type="button"
+                    class="iconbtn"
+                    (click)="showPasswordToggle()"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="16"
+                      height="16"
+                      fill="currentColor"
+                      class="bi bi-eye-slash-fill eyeIcon"
+                      viewBox="0 0 16 16"
+                      click="showPasswordToggle()"
+                      [ngStyle]="iconStyle"
+                    >
+                      <path
+                        d="m10.79 12.912-1.614-1.615a3.5 3.5 0 0 1-4.474-4.474l-2.06-2.06C.938 6.278 0 8 0 8s3 5.5 8 5.5a7.029 7.029 0 0 0 2.79-.588zM5.21 3.088A7.028 7.028 0 0 1 8 2.5c5 0 8 5.5 8 5.5s-.939 1.721-2.641 3.238l-2.062-2.062a3.5 3.5 0 0 0-4.474-4.474L5.21 3.089z"
+                      />
+                      <path
+                        d="M5.525 7.646a2.5 2.5 0 0 0 2.829 2.829l-2.83-2.829zm4.95.708-2.829-2.83a2.5 2.5 0 0 1 2.829 2.829zm3.171 6-12-12 .708-.708 12 12-.708.708z"
+                      />
+                    </svg>
+                  </button>
+                </span>
+              </div>
             </div>
 
             <div class="invalid">
@@ -110,10 +178,19 @@
                 "
               >
                 <span *ngIf="control.password.errors?.required"
-                  >*password required!</span
+                  >password required!</span
                 >
                 <span *ngIf="control.password.errors?.minlength">
-                  *password must be atleast 8 characters long!
+                  password must be atleast 8 characters long!
+                </span>
+                <span
+                  *ngIf="
+                    control.password.errors?.pattern &&
+                    control.password.errors?.minlength == null
+                  "
+                >
+                  password must contain an uppercase, a lowercase, a special
+                  character and a numberic value!
                 </span>
               </ng-container>
               <ng-template #elseblk>
@@ -122,8 +199,8 @@
             </div>
 
             <div style="height: 23px" class="row">
-              <label for="confirmPassword" class="col-5"
-                >Confirm Password</label
+              <label for="confirmPassword" class="col-5">
+                Confirm Password<span class="reqField">*</span></label
               >
               <input
                 type="password"
@@ -142,10 +219,10 @@
                 "
               >
                 <span *ngIf="control.confirmPassword.errors?.required"
-                  >*Confirm password required!</span
+                  >Confirm password required!</span
                 >
                 <span *ngIf="control.confirmPassword.errors?.passwordMisMatch">
-                  *Password doesn't match!
+                  Password doesn't match!
                 </span>
               </ng-container>
               <ng-template #elseblk>
