--- a/src/app/home/admin/components/food/food.component.css
+++ b/src/app/home/admin/components/food/food.component.css
@@ -62,17 +62,19 @@ h5 {
 .content {
   height: 553px;
   width: 100%;
-  background-image: url("https://th.bing.com/th/id/R.7689c5513084cd3ae199cec4f9b84af3?rik=epCX11FOp%2bUvgQ&riu=http%3a%2f%2fsfwallpaper.com%2fimages%2fbackground-food-7.jpg&ehk=OyOpA7JOvJ5kSZoKblkX96cNQ3uiu%2fHJUTOzI7b3j6o%3d&risl=&pid=ImgRaw&r=0");
+  background-image: url("https://images.pexels.com/photos/952353/pexels-photo-952353.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  filter: saturate(110%);
+  /* background-image: url("https://th.bing.com/th/id/R.7689c5513084cd3ae199cec4f9b84af3?rik=epCX11FOp%2bUvgQ&riu=http%3a%2f%2fsfwallpaper.com%2fimages%2fbackground-food-7.jpg&ehk=OyOpA7JOvJ5kSZoKblkX96cNQ3uiu%2fHJUTOzI7b3j6o%3d&risl=&pid=ImgRaw&r=0"); */
   background-attachment: fixed;
   background-size: cover;
 }
 .container {
   margin-top: 20px;
   position: absolute;
-  margin-left: 60px;
-}
+  margin-left: 107px;
+  width: 80%;}
 table {
-  background-color: #0a0a0ab3;
+  background-color: #0a0a0acf;
   color: white;
 }
 thead {
@@ -84,7 +86,7 @@ thead {
   --bs-table-bg: transparent;
   --bs-table-accent-bg: transparent;
   --bs-table-striped-color: #f8f9fa;
-  --bs-table-striped-bg: rgb(121 154 66 / 43%);
+  --bs-table-striped-bg: rgb(88 154 66 / 43%);
   --bs-table-active-color: #f8f9fa;
   --bs-table-active-bg: rgba(0, 0, 0, 0.1);
   --bs-table-hover-color: #212529;
@@ -93,7 +95,7 @@ thead {
 .mystyle {
   text-decoration: none;
   color: white;
-  background-color: #0a0a0ab3;
+  background-color: #0a0a0acf;
   height: 40px;
   padding-top: 5px;
   padding-right: 20px;
