--- a/src/app/home/user/components/goal/goal.component.css
+++ b/src/app/home/user/components/goal/goal.component.css
@@ -5,7 +5,7 @@
 .card {
   width: 22rem;
   align-items: center;
-  background-color: #0c0c0cb5;
+  background-color: #0a0a0acf;
   margin-bottom: 20px;
   padding: 5px;
   margin-left: 32px;
@@ -16,16 +16,18 @@
 .container {
   width: 35%;
   padding-bottom: 40px;
-  background-color: #0c0c0cb5;
-  margin-top: 65px;
-  margin-left: 400px;
+  background-color: #0a0a0acf;
+  margin-top: 89px;
+  margin-left: 421px;
   position: absolute;
 }
 
 .content {
   height: 553px;
   width: 100%;
-  background-image: url("https://th.bing.com/th/id/R.7689c5513084cd3ae199cec4f9b84af3?rik=epCX11FOp%2bUvgQ&riu=http%3a%2f%2fsfwallpaper.com%2fimages%2fbackground-food-7.jpg&ehk=OyOpA7JOvJ5kSZoKblkX96cNQ3uiu%2fHJUTOzI7b3j6o%3d&risl=&pid=ImgRaw&r=0");
+  background-image: url("https://images.pexels.com/photos/952353/pexels-photo-952353.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  filter: saturate(110%);
+  /* background-image: url("https://th.bing.com/th/id/R.7689c5513084cd3ae199cec4f9b84af3?rik=epCX11FOp%2bUvgQ&riu=http%3a%2f%2fsfwallpaper.com%2fimages%2fbackground-food-7.jpg&ehk=OyOpA7JOvJ5kSZoKblkX96cNQ3uiu%2fHJUTOzI7b3j6o%3d&risl=&pid=ImgRaw&r=0"); */
   background-attachment: fixed;
   background-size: cover;
 }
